--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -139,7 +139,7 @@ The Swedish vowel space is a relatively densely populated space with 21 categori
 The Swedish vowel inventory consists of 21 categories that differ in spectral (formant frequencies) and temporal cues (duration). It forms a typologically rather complex space, characterized by a systematic quantity distinction resulting in 9 long and short vowel pairs, 3 different levels of lip-rounding, and contextually conditioned allophones to /`r linguisticsdown::cond_cmpl("ɛ")`/ and /`r linguisticsdown::cond_cmpl("ø")`/ in position before /r/ or retroflex segments. Given the crowdedness of the space and resulting category overlap for some vowels, previous work has reported on the importance of additional cues besides the two primary determinants to vowel identity cross-linguistically---the first two formants, F1 and F2 [e.g., @joos1948; @Ladefoged1957; @nearey-assmann1986; @peterson1961]---as well as the need to look beyond static point estimates of F1 and F2. For instance, the third formant (F3) for rounded vs. unrounded categories, and formant dynamics for several neighboring categories in the front part of the space [@kuronen2000; @pelzer-boersma2019]. This paper investigates the acoustic characteristics of modern-day Swedish vowels in two studies that aim to contribute to our understanding of language-specific and langue-general patterns of vowel acoustics. 
 
 The first study presents a comprehensive description of the primary acoustic cues to vowel identity, using a recently released database of *h-VOWEL-d* (short: hVd) words recorded by 44 male and female talkers of Swedish, the SwehVd database [@persson-jaeger2023]. The second study assesses whether the Swedish vowel space has been submitted to changes over the last generation, by comparing the acoustics of SwehVd against that of a reference material from 1999 [@eriksson2004]. The variety investigated is Central Swedish, the regional standard variety of Swedish spoken in an area around and beyond Stockholm (eastern Svealand), including Mälardalssvenska, Sveamål, Uppsvenska, Mellansvenska [see e.g., @bruce2009; @elert1994; @riad2014].^[For the reader unfamiliar with Central Swedish, Section \@ref(sec:sweVowels) provides an overview of the acoustics of Central Swedish vowel space.] 
-Existing descriptions of the entire space of 21 vowels rest on recordings made more than 25 years ago [reported in, e.g., @engstrand1999; @kuronen2000; @leinonen2010; @riad2014]. Two of the most recent studies are @leinonen2010 and @kuronen2000. The former is based on recordings obtained around 1999 of all but four of the short vowels.<!--change this--> It covers more than 1000 rural locations in Sweden, including reference talkers of Standard Swedish. The latter covers the entire vowel space but is based on recordings from 1981 [@leinonen1982]. More recent work over the last two decades has focused on parts of the phonological space instead, such as the long vowels for studies on diphthongization [@pelzer-boersma2019], two vowels for merger studies [e.g., [`r linguisticsdown::cond_cmpl("ɵ")`] - [`r linguisticsdown::cond_cmpl("œ")`] in @wenner2010], or a single vowel, such the damped [`r linguisticsdown::cond_cmpl("ɨː")`] [@schotz2011], see Table \@ref(tab:previous-work). These studies all provide detailed mappings of different parts of the space, and contribute with important insights into ongoing processes and shifts. However, given their focus on subsets of the space, acoustic mappings of the modern-day Central Swedish vowel space *in its entirety* are largely lacking. In terms of how representative these subsets are for the vowel space as a whole remains an open question, as there is some evidence that productions of minimal pairs can lead to enhanced contrasts that might thus have affected the realizations of those vowels [@seyfarth; @buz; @lancia-winter]. In addition, most previous studies differ in the materials used, in terms of the size of the database (e.g., number of talkers, number of repetitions per vowel), the demographics of talkers (e.g., male/female talkers, region of origin), and phonological contexts used for recording. For instance, the majority of previous studies have either not held the phonetic context constant across vowels, or have investigated isolated vowel production out of context or in different CVC contexts (Table \@ref(tab:previous-work)). This diversity restricts comparison across studies on Swedish, as well as cross-linguistically.
+Existing descriptions of the entire space of 21 vowels rest on recordings made more than 25 years ago [reported in, e.g., @engstrand1999; @kuronen2000; @leinonen2010; @riad2014]. Two of the most recent studies are @leinonen2010 and @kuronen2000. The former is based on recordings obtained around 1999 of all vowels, however four of the short vowels are omitted from the analysis. It covers more than 1000 rural locations in Sweden, including reference talkers of Standard Swedish. The latter covers the entire vowel space but is based on recordings from 1981 [@leinonen1982]. More recent work over the last two decades has focused on parts of the phonological space instead, such as the long vowels for studies on diphthongization [@pelzer-boersma2019], two vowels for merger studies [e.g., [`r linguisticsdown::cond_cmpl("ɵ")`] - [`r linguisticsdown::cond_cmpl("œ")`] in @wenner2010], or a single vowel, such the damped [`r linguisticsdown::cond_cmpl("ɨː")`] [@schotz2011], see Table \@ref(tab:previous-work). These studies all provide detailed mappings of different parts of the space, and contribute with important insights into ongoing processes and shifts. However, given their focus on subsets of the space, acoustic mappings of the modern-day Central Swedish vowel space *in its entirety* are largely lacking. In terms of how representative these subsets are for the vowel space as a whole remains an open question, as there is some evidence that productions of minimal pairs can lead to enhanced contrasts that might thus have affected the realizations of those vowels [@seyfarth; @buz; @lancia-winter]. In addition, most previous studies differ in the materials used, in terms of the size of the database (e.g., number of talkers, number of repetitions per vowel), the demographics of talkers (e.g., male/female talkers, region of origin), and phonological contexts used for recording. For instance, the majority of previous studies have either not held the phonetic context constant across vowels, or have investigated isolated vowel production out of context or in different CVC contexts (Table \@ref(tab:previous-work)). This diversity restricts comparison across studies on Swedish, as well as cross-linguistically.
 
 \begin{landscape}
 
@@ -256,7 +256,7 @@ read_delim('../../data/phonetic vowel statistics/Swedish/Published databases/Kur
   myGplot.defaults(base_size+2)
 ```
 
-The materials and methodological approach adopted in the current paper is motivated by the goal to complement previous work for a comprehensive picture of modern-day Central Swedish vowels. <!--This motivates the present study, which aims to provide a comprehensive picture of the modern-day vowel space of Central Swedish.--> The first study provides an up-to-date acoustic description of the entire Central Swedish vowel space of 21 categories, using the SwehVd database [@persson-jaeger2023]. The use of an hVd database minimizes coarticulatory effects from the surrounding phonetic context, and increases cross-linguistic comparability [e.g., @hillenbrand1995; @Peterson1952]. The main spectral and temporal cues to vowel identity are reported in static analyses [following e.g., @engstrand1999; @fant1969], as well as dynamic analyses, given the well documented importance of formant dynamics on vowel production and perception [e.g., @assmann-katz2005; @eklund1997; @hillenbrand-nearey1999; @kuronen2000; @nearey-assmann1986]. In contrast with previous work investigating the dynamics of Central Swedish vowels, the present study includes analyses of both long and short vowels, thus submitting the entire vowel space to the same analyses. 
+The materials and methodological approach adopted in the current paper is motivated by the goal to complement previous work for a comprehensive picture of modern-day Central Swedish vowels. The first study provides an up-to-date acoustic description of the entire Central Swedish vowel space of 21 categories, using the SwehVd database [@persson-jaeger2023]. The use of an hVd database minimizes coarticulatory effects from the surrounding phonetic context, and increases cross-linguistic comparability [e.g., @hillenbrand1995; @Peterson1952]. The main spectral and temporal cues to vowel identity are reported in static analyses [following e.g., @engstrand1999; @fant1969], as well as dynamic analyses, given the well documented importance of formant dynamics on vowel production and perception [e.g., @assmann-katz2005; @eklund1997; @hillenbrand-nearey1999; @kuronen2000; @nearey-assmann1986]. In contrast with previous work investigating the dynamics of Central Swedish vowels, the present study includes analyses of both long and short vowels, thus submitting the entire vowel space to the same analyses. 
 
 The static analysis assesses what cues contribute to vowel distinctions and evaluates some of the claims brought forward in previous work, such as the hypothesized importance of F3 for rounded vs. unrounded high front vowel distinctions, and to what extent spectral and temporal cues contribute to vowel pair distinctions [@refs]. The dynamic analysis evaluates what information is added to this cue evaluation when formant dynamics is considered. In essence, how much information does formant dynamics add to the evaluation of hypothesized effects of the relative contribution of different cues for vowel pair and vowel category distinctions.
 
@@ -369,7 +369,7 @@ Central Swedish is most often described as having nine vowel phonemes: /`r lingu
 
 It has furthermore been suggested that Central Swedish is defined by three levels of lip-rounding, where the rounded vowels are traditionally referred to as either inrounded, with an extreme narrowing of the lips---[`r linguisticsdown::cond_cmpl("ʉː")`] and [`r linguisticsdown::cond_cmpl("uː")`], or outrounded, with less degree of lip narrowing and more protruded lips---[`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("øː")`], [`r linguisticsdown::cond_cmpl("oː")`] [e.g., @fant1971]. Previous work has claimed that lip-rounding is particularly important for some vowel distinctions, especially closely located high vowels. For instance, [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] have been described as overlapping in F1-F2 space, but as more separable when F3 is considered [e.g., @fant1959; @fant1969; @fujimura1967; @kuronen2000].
 
-The 9 vowel pairs differ systematically in duration, with short-long vowel to vowel ratios reported to be on average .65-.67 for Central Swedish [e.g., @elert1964; @kuronen2000; @strangert2001]. Spectral differences between pairs have traditionally been interpreted as a consequence of the durational distinction, hence assuming a trading relationship between spectral and temporal cues [for a review, see @schaeffler2005]. It has been hypothesized that most of the durational variation is carried by F2 [e.g., @kuronen2000; @lindblom1963]. Previous work has found the largest spectral differences for the [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("ɵ")`], and [`r linguisticsdown::cond_cmpl("ɑː")`] - [`r linguisticsdown::cond_cmpl("a")`] vowel pairs, and the smallest differences for [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], and [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`] [e.g., @kuronen2000]. For pairs with small spectral differences, duration is presumably of importance for vowel distinction. Perceptual studies have confirmed that duration is the primary cue for [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`], [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], and [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`] [e.g., @behne-kirk1997; @haddingkoch1964].<!--add comment on listeners of what variety listnening to speech in what variety? if no info, add footnote that those were not controlled--> The extent to which duration is cue to short-long distinctions *across all* vowel pairs is less known.
+The 9 vowel pairs differ systematically in duration, with short-long vowel to vowel ratios reported to be on average .65-.67 for Central Swedish [e.g., @elert1964; @kuronen2000; @strangert2001]. Spectral differences between pairs have traditionally been interpreted as a consequence of the durational distinction, hence assuming a trading relationship between spectral and temporal cues [for a review, see @schaeffler2005]. It has been hypothesized that most of the durational variation is carried by F2 [e.g., @kuronen2000; @lindblom1963]. Previous work has found the largest spectral differences for the [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("ɵ")`], and [`r linguisticsdown::cond_cmpl("ɑː")`] - [`r linguisticsdown::cond_cmpl("a")`] vowel pairs, and the smallest differences for [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], and [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`] [e.g., @kuronen2000]. For pairs with small spectral differences, duration is presumably of importance for vowel distinction. Perceptual studies on synthesized speech from talkers of Stockholm Swedish have confirmed that duration is the primary cue for [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], and [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`] [@behne-kirk1997; for results on Southern Swedish and additional vowels, [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`], see @haddingkoch1964].^[What variety of Swedish the listeners spoke was however not reported in @behne-kirk1997.] The extent to which duration is cue to short-long distinctions *across all* vowel pairs is less known.
 
 Several of the long vowels in Central Swedish tend to diphthongize in their phonetic realization. Diphthongization is considered prosodically conditioned and is the strongest in stressed vowels [e.g., @bleckert1987; @leinonen2010].^[In general, true phonological diphthongs are not considered part of the phonological inventory of Central Swedish [@eliasson2022].] Previous studies have characterized the diphthongal glide in the later part of the long vowels as either a centralization of the vowel segment towards [`r linguisticsdown::cond_cmpl("ə")`] or a more open quality, or as a consonantal offglide [e.g., @elert1981; @elert2000; @fant1969; @fant1971; @kuronen2000; @mcallister1974; @pelzer-boersma2019; @riad2014]. Results are inconclusive as to how widespread diphthongization is across the vowel space, and what direction it takes. Most work has however found substantial diphthongization towards a more open quality for the mid and mid-high vowels [`r linguisticsdown::cond_cmpl("eː")`], [`r linguisticsdown::cond_cmpl("øː")`] and [`r linguisticsdown::cond_cmpl("oː")`] [e.g., @eklund1997; @elert2000; @fant1969; @pelzer-boersma2019]. In addition, results have shown that diphthongization cues vowel distinctions for several of the high vowels ([`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("ʉː")`], and [`r linguisticsdown::cond_cmpl("uː")`]) [e.g., @fant1971]. For instance, @kuronen2000 reported that [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("eː")`], and [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("oː")`], differed in formant patterns only at later time-points of the vowel for some talkers in his study. He also found that the contrast between [`r linguisticsdown::cond_cmpl("ɛː")`] and [`r linguisticsdown::cond_cmpl("æː")`] was maintained solely by trajectory movements. Of importance for the present study, less is known about the formant dynamics in the short vowels, given the almost exclusive focus on the long vowels in studies on diphthongization.
 
@@ -1066,8 +1066,7 @@ par(mfrow=c(1,2))
 itsadug::plot_smooth(m.F2.long, view = "timepoint", plot_all = "category", col = c("#66C2A5", "#FC8D62", "#FB9A99", "#E7298A", "#A6D854","#A6CEE3"), print.summary = FALSE, cond = list(category = c("[iː]", "[yː]", "[eː]", "[ɛː]", "[æː]", "[oː]")), ylim = c(-.75, .75))
 itsadug::plot_smooth(m.F2.short, view = "timepoint", plot_all = "category", col = c("#1B9E77", "#D95F02"), print.summary = FALSE, cond = list(category = c("[ɪ]", "[ʏ]")), ylim = c(-.75, .75))
 ```
-A main effect of vowel was also found for F3 for all vowels besides [`r linguisticsdown::cond_cmpl("yː")`] ($\hat\beta = -.003, se = .011, p > .80$; all other $ps > .046$). The fact that a main effect of vowel on F3 was only found for the [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] and not the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] distinction, suggests that F3 does not reliably distinguish between the long high front rounded-unrounded vowels, in line with the qualitative analysis (Figure \@ref(fig:m-F3)) (Figure
-\@ref(fig:SI-m-F3) in SI visualizes all categories included in the GAMMs for F3).^[A main effect of Gender was only found for F2 and the short vowels ($\hat\beta = -.028, se = .01, p > .006$).]
+A main effect of vowel was also found for F3 for all vowels besides [`r linguisticsdown::cond_cmpl("yː")`] ($\hat\beta = -.003, se = .011, p > .80$; all other $ps > .046$). The fact that a main effect of vowel on F3 was only found for the [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] and not the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] distinction, suggests that F3 does not reliably distinguish between the long high front rounded-unrounded vowels, in line with the qualitative analysis (Figure \@ref(fig:m-F3)) (Figure \@ref(fig:SI-m-F3) in SI visualizes all categories included in the GAMMs for F3).^[A main effect of Gender was only found for F2 and the short vowels ($\hat\beta = -.028, se = .01, p > .006$).]
 
 The separate GAMMs fitted to F1, F2 and F3 for the long and short vowels suggest that when formant dynamics is considered, the overlap in F1 and F2 for the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] distinction is likely reduced. Given the absence of main effect for F3, it might be reasonable to assume that the dynamics in F1 and F2 is presumably sufficient for a reliable distinction between the two categories...<!--add here-->
 
@@ -1748,7 +1747,7 @@ In Study 2, the acoustic characteristics of SwehVd were subsequently compared to
 
 Several vowels had shifted quite considerably compared to earlier work on Central Swedish [c.f., @fant1969; @kuronen2000]. Two of the most important shifts concerned the fronting of [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("ʏ")`] and the centralization of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`], where [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("ʏ")`] appeared to maintain their positions as high front vowels, while [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] had centralized to the mid-center part of the space. Compared to the SweDia reference materials, the shifts in [`r linguisticsdown::cond_cmpl("ɪ")`], [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] were not as substantial as for other vowels, which suggests that these changes had begun already in 1999, and then continued throughout the first two decades of the 2000s [see also, @pelzer-boersma2019].^[Unfortunately, @pelzer-boersma2019's study on diphthongization only included the long vowels, it is therefore difficult to know whether the fronting of the short vowels was as pronounced in 2019.]
 
-The high front vowels form a particularly interesting part of the space given that several possibly related processes might be ongoing. Besides the centralization of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`], the visualizations and GAMMs suggested that F3 could not reliably distinguish between the two vowels, and that the differences in F1 and F2 were small. These findings conflicted with previous work on Central Swedish [e.g., @fant1969; @fujimura1967; @kuronen2000], and would seem to indicate three possibilities: 1) the contrast might primarily be supported by dynamics (as changes<!--wrong word?-->, albeit small, were found for F1 and F2), or by additional acoustic cues not investigated in this study, 2) listeners might disambiguate the two categories using visual cues or linguistic information, or 3) perhaps these two categories are not distinguished at all, which would suggest a merger in process among these talkers. A merger might be driven by relaxation of lip-rounding, as supported by the higher F3 values found for [`r linguisticsdown::cond_cmpl("yː")`]. 
+The high front vowels form a particularly interesting part of the space given that several possibly related processes might be ongoing. Besides the centralization of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`], the visualizations and GAMMs suggested that F3 could not reliably distinguish between the two vowels, and that the differences in F1 and F2 were small. These findings conflicted with previous work on Central Swedish [e.g., @fant1969; @fujimura1967; @kuronen2000], and would seem to indicate three possibilities: 1) the contrast might primarily be supported by dynamics (as differences, albeit small, were found for F1 and F2 dynamics), or by additional acoustic cues not investigated in this study, 2) listeners might disambiguate the two categories using visual cues or linguistic information, or 3) perhaps these two categories are not distinguished at all, which would suggest a merger in process among these talkers. A merger might be driven by relaxation of lip-rounding, as supported by the higher F3 values found for [`r linguisticsdown::cond_cmpl("yː")`]. 
 
 Both of these processes---centralization and relatively sustained overlap---could however be explained by [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] being produced as damped versions. The presence of a damped [`r linguisticsdown::cond_cmpl("ɨː")`] would be supported by the lower F2 values, as the consonantal offglide in [`r linguisticsdown::cond_cmpl("ɨː")`] lowers F2 [@engstrand2000]. A merger of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] into [`r linguisticsdown::cond_cmpl("ɨː")`] has been observed among younger talkers in other regions in Sweden. @gross2020 concluded that several of the talkers of Gothenburg Swedish in their study whose [`r linguisticsdown::cond_cmpl("iː")`] had a horizontally centralized quality closer to [`r linguisticsdown::cond_cmpl("yː")`], merged the two categories into [`r linguisticsdown::cond_cmpl("ɨː")`]. If centralization of [`r linguisticsdown::cond_cmpl("iː")`] is a prerequisite for the merger, as suggested by @gross2020, what we see here might be the beginning of a merger in process. A future scenario might involve the loss of the defining feature lip rounding in [`r linguisticsdown::cond_cmpl("yː")`] if a merger continues, given its weaker perceptual salience [as hypothesized by @gross2020].^[A parallel exist in iotacism in Norwegian and Swedish dialects [@eliasson2000], characterized by the loss of lip rounding resulting in vowel shifts such as [`r linguisticsdown::cond_cmpl("yː")`] to [`r linguisticsdown::cond_cmpl("iː")`] for monophthongs, and [`r linguisticsdown::cond_cmpl("øy")`] to [`r linguisticsdown::cond_cmpl("ei")`] for diphthongs. Iotacism describes a feature loss for a fairly unusual phonological characteristic---rounded front vowels. Talkers that merge because of iotacism would not necessarily produce [`r linguisticsdown::cond_cmpl("iː")`] as the damped [`r linguisticsdown::cond_cmpl("ɨː")`], which could potentially explain the vowel patterns of two talkers that merge the two vowels but have a rather fronted [`r linguisticsdown::cond_cmpl("iː")`] without an offglide consonant element (see \@ref(fig:swe-merge), for Talkers SW_005 and SW_015).] 
 
