--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -952,6 +952,17 @@ abstract = {Abstract This study considers the role of different cognitive units 
 year = {2018}
 }
 
+@article{seyfarth2016,
+  title={Dynamic hyperarticulation of coda voicing contrasts},
+  author={Seyfarth, Scott and Buz, Esteban and Jaeger, T Florian},
+  journal={The Journal of the Acoustical Society of America},
+  volume={139},
+  number={2},
+  pages={EL31--EL37},
+  year={2016},
+  publisher={AIP Publishing}
+}
+
 @article{soskuthy2021,
   title = {Evaluating generalised additive mixed modelling strategies for dynamic speech analysis},
   author = {Sóskuthy, Márton},
